Bug 282523 - List of cookies in Site Policy is sorted incorrectly
Summary: List of cookies in Site Policy is sorted incorrectly
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: kcookiejar (other bugs)
Version First Reported In: 4.7.0
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 02:33 UTC by John Zaitseff
Modified: 2011-09-26 15:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Zaitseff 2011-09-22 02:33:48 UTC
Version:           4.7.0 (using KDE 4.7.0) 
OS:                Linux

A minor bug, but somewhat annoying and hopefully very easy to fix: the list of cookies shown in Site Policy (Settings > Configure Konqueror > Cookies, Policy tab) is not sorted correctly, at least in the en_AU locale.  In fact, the list is REVERSE-alphabetically sorted.  Konqueror (and KDE in general) does NOT remember sort orders for lists like these, so having to click on the Domain header each and every time gets tedious...  The list of cookies in the Management tab IS correctly sorted.

This bug has been present in at least the last few KDE releases and quite possibly all of them since KDE 4.0!

Reproducible: Always

Steps to Reproduce:
Start Konqueror, select Settings > Configure Konqueror menu item, click the Cookies page, Policy tab.  The Site Policy panel has the cookies in reverse-alphabetical order instead of alphabetical order.

Actual Results:  
As described above.

Expected Results:  
As described above: the list of cookies should be sorted alphabetically by Domain by default.
Comment 1 Dawit Alemayehu 2011-09-26 15:37:34 UTC
Git commit f776fb1a336b5a023b4492042451aed173ea1ca6 by Dawit Alemayehu.
Committed on 26/09/2011 at 17:35.
Pushed by adawit into branch 'KDE/4.7'.

Sort the cookie policy list box in ascending order.

BUG: 282523
FIXED-IN: 4.7.2

M  +2    -0    konqueror/settings/kio/kcookiespolicies.cpp

http://commits.kde.org/kde-baseapps/f776fb1a336b5a023b4492042451aed173ea1ca6
Comment 2 Dawit Alemayehu 2011-09-26 15:38:50 UTC
Git commit 8229d6e31e280b78d7f46ea8cc856c2898af0df0 by Dawit Alemayehu.
Committed on 26/09/2011 at 17:31.
Pushed by adawit into branch 'master'.

Sort the cookie policy list box in ascending order.

BUG: 282523
FIXED-IN: 4.7.2

M  +3    -1    konqueror/settings/kio/kcookiespolicies.cpp

http://commits.kde.org/kde-baseapps/8229d6e31e280b78d7f46ea8cc856c2898af0df0