Sort the cookie policy list box in ascending order.

BUG: 282523
FIXED-IN: 4.7.2